# anime-lines-parser

./: .gitignore  README.md  anime_subtitles_with_tags.csv  main.py  parse_file_cli.py  pyproject.toml  uploads3.py
