[project]
name = "anime-lines-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.10.0.84",
    "paddleocr>=2.9.1",
    "pandas>=2.2.3",
    "r2client>=0.2.1",
    "requests>=2.32.3",
    "transformers>=4.47.1",
    "ultralytics>=8.3.59",
    "numpy==1.26.4",
    "boto3>=1.37.4",
]
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
[tool.uv.sources]
torch = [{ index = "pytorch-cu124", marker = "platform_system != 'Darwin'" }]
torchvision = [
    { index = "pytorch-cu124", marker = "platform_system != 'Darwin'" },
]
